--- a/CoreQuiz/MainWindow.xaml
+++ b/CoreQuiz/MainWindow.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CoreQuiz"
         mc:Ignorable="d"
-        Title=".NET Core Quiz" Height="450" Width="800">
+        Title=".NET Core Quiz" Height="450" Background="#6b8e23" Width="800">
     <Grid>
-        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="163,131,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
-        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="163,186,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
-        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="163,240,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
-        <RadioButton Content="RadioButton" HorizontalAlignment="Left" Margin="163,240,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
-        <TextBlock HorizontalAlignment="Left" Margin="96,52,0,0" TextWrapping="Wrap" Text="What year was .NET Core Released?" VerticalAlignment="Top" FontSize="36" FontFamily="Microsoft JhengHei UI Light"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="326,368,0,0" VerticalAlignment="Top" Width="75" Background="#FF1873E7" Click="Button_Click"/>
+        <RadioButton Content="2018" GroupName="question" HorizontalAlignment="Left" Margin="131,102,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
+        <RadioButton Content="2014" GroupName="question" HorizontalAlignment="Left" Margin="131,151,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
+        <RadioButton Content="2000" GroupName="question" HorizontalAlignment="Left" Margin="131,205,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
+        <RadioButton Content="1994" GroupName="question" HorizontalAlignment="Left" Margin="131,259,0,0" VerticalAlignment="Top" FontFamily="Microsoft JhengHei UI Light" FontSize="22"/>
+        <TextBox HorizontalAlignment="Left" Margin="96,28,0,0" TextWrapping="Wrap" Text="What year was .NET Core Released?" VerticalAlignment="Top" FontSize="36" FontFamily="Microsoft JhengHei UI Light"/>
+        <Button Name="Submit_btn" Content="Submit Quiz" FontSize="23" HorizontalAlignment="Left"  Margin="279,336,0,0" Width="200" Height="50" VerticalAlignment="Top" Foreground="White" Background="#FF1873E7" Click="Button_Click"/>
+        <Button Content="Next" HorizontalAlignment="Left" FontSize="23" Margin="579,299,0,0" Foreground="White" Background="#FF1873E7" VerticalAlignment="Top" Click="NextButton_Click" Width="75"/>
 
     </Grid>
 </Window>
